# trumpet-cpp

./: CMakeLists.txt
src/: main.cpp
